# sugarcrm_mlp_builder

./: .env  Cargo.toml  LICENSE  README.md
src/: main.rs
src/resources/: cli.yml  manifest.txt
