[package]
name = "sugarcrm_mlp_builder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zip = "0.6.2"
clap = {version = "2.34", features = ["yaml"]}
dotenv = "0.15.0"
dotenv_codegen = "0.15.0"
chrono = "0.4.22"
walkdir = "2"
